--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <joda-time.version>2.3</joda-time.version>
         <junit.version>4.10</junit.version>
         <jogl.version>2.1.3</jogl.version>
+        <janino.version>2.5.10</janino.version>
     </properties>
 
     <dependencies>
@@ -36,6 +37,11 @@
             <groupId>org.jogamp.gluegen</groupId>
             <artifactId>gluegen-rt</artifactId>
             <version>${jogl.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>janino</groupId>
+            <artifactId>janino</artifactId>
+            <version>${janino.version}</version>
         </dependency>
         <dependency>
             <groupId>com.yammer.dropwizard</groupId>
