--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <junit.version>4.10</junit.version>
         <jogl.version>2.1.3</jogl.version>
         <janino.version>2.5.10</janino.version>
+        <itext.version>2.1.7</itext.version>
     </properties>
 
     <dependencies>
@@ -42,6 +43,11 @@
             <groupId>janino</groupId>
             <artifactId>janino</artifactId>
             <version>${janino.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.lowagie</groupId>
+            <artifactId>itext</artifactId>
+            <version>${itext.version}</version>
         </dependency>
         <dependency>
             <groupId>com.yammer.dropwizard</groupId>
