--- a/pom.xml
+++ b/pom.xml
@@ -11,14 +11,21 @@
 
     <properties>
         <dropwizard.version>0.6.1</dropwizard.version>
-        <joda-time.version>2.3</joda-time.version>
-        <junit.version>4.10</junit.version>
-        <jogl.version>2.1.3</jogl.version>
-        <janino.version>2.5.10</janino.version>
         <itext.version>2.1.7</itext.version>
+        <janino.version>2.5.10</janino.version>
+        <joda-time.version>2.3</joda-time.version>
+        <jogl.version>2.1.3</jogl.version>
+        <jts.version>1.13</jts.version>
+        <junit.version>4.10</junit.version>
+        <scaleset-geo.version>0.7.0</scaleset-geo.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.vividsolutions</groupId>
+            <artifactId>jts</artifactId>
+            <version>${jts.version}</version>
+        </dependency>
         <dependency>
             <groupId>com.yammer.dropwizard</groupId>
             <artifactId>dropwizard-core</artifactId>
@@ -48,6 +55,11 @@
             <groupId>com.lowagie</groupId>
             <artifactId>itext</artifactId>
             <version>${itext.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.scaleset</groupId>
+            <artifactId>scaleset-geo</artifactId>
+            <version>${scaleset-geo.version}</version>
         </dependency>
         <dependency>
             <groupId>com.yammer.dropwizard</groupId>
